--- a/index.html
+++ b/index.html
@@ -46,6 +46,10 @@
                     The atmosphere in New York is lorem ipsum.
                 </div>
             </div>
+
+            <div class="map-section">
+                <img src="./assets/img/slider/slider1.jpg" alt="Map">
+            </div>
         </div>
 
         <div id="content">
